refactor: More nullability and inspection cleanup