@@ -46,7 +46,7 @@ public class NodeSorting {
 	private static final Logger LOGGER = LoggerFactory.getLogger("fabric-api-base");
 
 	@VisibleForTesting
-	public static boolean ENABLE_CYCLE_WARNING = true;
+	public static final boolean ENABLE_CYCLE_WARNING = true;
 
 	/**
 	 * Sort a list of nodes.
@@ -104,7 +104,7 @@ public class NodeSorting {
 
 		// Order SCCs according to priorities. When there is a choice, use the SCC with the lowest id.
 		// The priority queue contains all SCCs that currently have 0 in-degree.
-		PriorityQueue<NodeScc<N>> pq = new PriorityQueue<>(Comparator.comparing(scc -> scc.nodes.get(0), comparator));
+		PriorityQueue<NodeScc<N>> pq = new PriorityQueue<>(Comparator.comparing(scc -> scc.nodes.getFirst(), comparator));
 		sortedNodes.clear();
 
 		for (NodeScc<N> scc : nodeToScc.values()) {
